# humanoid_driving

./: .gitignore
driving_aid_visualization/: CMakeLists.txt  package.xml
driving_aid_visualization/launch/: driving_controller.launch  polaris_drive_aid.launch  polaris_drive_aid_atlas.launch
driving_aid_visualization/src/: driving_aid_visualization_node.cpp  ground_plane_mesh_provider_node.cpp
humanoid_driving_controller/: CMakeLists.txt  package.xml
humanoid_driving_controller/config/head/: head_config.yaml
humanoid_driving_controller/config/steering/: key_pos.yaml  real_robot_4.yaml  thor_sim.yaml  thor_virtual_driving.yaml
humanoid_driving_controller/config/throttle/: speed_configuration.yaml  thor_sim.yaml  thor_virtual_driving.yaml  throttle_final.yaml
humanoid_driving_controller/include/humanoid_driving_controller/: driving_controller.h
humanoid_driving_controller/launch/: driving_controller.launch  driving_controller_gazebo.launch
humanoid_driving_controller/msg/: DrivingCommand.msg  DrivingState.msg
humanoid_driving_controller/scripts/: save_leg_position.py  save_steering_positions.py
humanoid_driving_controller/src/: driving_controller.cpp  driving_controller_node.cpp
humanoid_driving_widget/: CMakeLists.txt  package.xml
humanoid_driving_widget/config/: logitech_joypad.yaml  logitech_wingman.yaml  xbox_joypad.yaml
humanoid_driving_widget/include/humanoid_driving_widget/: driving_widget.h
humanoid_driving_widget/launch/: driving_widget.launch  driving_widget_gazebo.launch  driving_widget_keyboard.launch
humanoid_driving_widget/src/: driving_widget.cpp  driving_widget.ui  driving_widget_node.cpp
humanoid_driving_widget/src/res/: resources.qrc
key_to_joy_mapper/: CMakeLists.txt  package.xml
key_to_joy_mapper/config/: mapping.yaml
key_to_joy_mapper/launch/: key_to_joy_mapper.launch
key_to_joy_mapper/src/: key_to_joy_mapper.cpp
thor_mang_driving_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
thor_mang_driving_controller/config/: controller_topics.yaml  key_pos.yaml  leg_key_frames.yaml  real_robot_1.yaml  real_robot_2.yaml  speed_configuration.yaml  test.yaml  test1.yaml  test_key_frames.yaml
thor_mang_driving_controller/config/head/: head_config.yaml
thor_mang_driving_controller/config/steering/: atlas_gazebo_wheel.yaml  atlas_real.yaml  real_robot_3.yaml  real_robot_final_2.yaml
thor_mang_driving_controller/config/throttle/: atlas_leg.yaml  speed_configuration.yaml
thor_mang_driving_controller/config_bak/steering/: real_robot_final.yaml
thor_mang_driving_controller/config_bak/throttle/: speed_configuration.yaml
thor_mang_driving_controller/include/thor_mang_driving_controller/: thor_mang_driving_controller.h
thor_mang_driving_controller/launch/: driving_controller.launch
thor_mang_driving_controller/msg/: DrivingCommand.msg  DrivingState.msg
thor_mang_driving_controller/src/: save_key_positions.py  save_leg_position.py  thor_mang_driving_controller.cpp  thor_mang_driving_controller_node.cpp
thor_mang_driving_widget/: CMakeLists.txt  package.xml
thor_mang_driving_widget/config/: head_config.yaml  logitech_cable_joypad.yaml  logitech_f310_joypad.yaml  logitech_joypad.yaml
thor_mang_driving_widget/launch/: driving_widget.launch  driving_widget_gazebo.launch  driving_widget_xbox.launch
thor_mang_driving_widget/src/: driving_widget.cpp  driving_widget.h  driving_widget.ui  driving_widget_node.cpp
