<?xml version="1.0"?>
<package>
  <name>humanoid_driving_controller</name>
  <version>0.1.0</version>
  <description>Controller for a humanoid robot driving a vehicle</description>

  <maintainer email="steinachim@gmx.de">Achim Stein</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
