<?xml version="1.0"?>
<package>
  <name>humanoid_driving_widget</name>
  <version>0.1.0</version>
  <description>Control widget for humanoid driving</description>
  <maintainer email="steinachim@gmx.de">Achim Stein</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>humanoid_driving_controller</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>humanoid_driving_controller</run_depend>
</package>
