<?xml version="1.0"?>
<package>
  <name>key_to_joy_mapper</name>
  <version>0.1.0</version>
  <description>Map keyboard input to joystick messages</description>

  <maintainer email="steinachim@gmx.de">Achim Stein</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>keyboard</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>keyboard</run_depend>
  <run_depend>std_msgs</run_depend>  
</package>
